--- a/package.json
+++ b/package.json
@@ -17,5 +17,10 @@
     "url": "https://github.com/herwingxtech/inventario_soporte/issues"
   },
   "homepage": "https://github.com/herwingxtech/inventario_soporte#readme",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "mysql2": "^3.14.1"
+  }
 }
