--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "build:tailwind": "npx @tailwindcss/cli -i ./public/css/input.css -o ./public/css/output.css --watch"
+  
   },
   "repository": {
     "type": "git",
@@ -17,11 +19,17 @@
     "url": "https://github.com/herwingxtech/inventario_soporte/issues"
   },
   "homepage": "https://github.com/herwingxtech/inventario_soporte#readme",
-  "description": "",
   "dependencies": {
+    "@tailwindcss/cli": "^4.1.10",
     "bcrypt": "^6.0.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "mysql2": "^3.14.1"
-  }
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.10"
+  },
+  "description": ""
 }
